# gl

./: CMakeLists.txt  Mesh.cpp  Mesh.h  Model.cpp  Model.h  basic.frag  basic.vert  budynek1.fbx  budynek2.fbx  cube.cpp  cube.h  main.cpp  modelloader.cpp  modelloader.h  platform.cpp  platform.h  player.cpp  player.h  shader.cpp  shader.h  skybox.frag  skybox.vert  stb_image.cpp
